adjustments on padding on index, spacing on qoute-section, added .prevent-default on nav.js and changed to # for hamburger links

--- a/css/main.css
+++ b/css/main.css
@@ -394,7 +394,7 @@ th {
 */
 /*
 .cirkel {
-    //Av n├Ñgon anledning fungerade inte $green...
+    //Av någon anledning fungerade inte $green...
     background-color: #45b29d;
     fill: #45b29d;
     border-radius: 50%;
@@ -590,39 +590,29 @@ th {
 @media (min-width: 768px) {
   .col-1 {
     width: 12%; }
-
   .col-2 {
     width: 16.6666%; }
-
   .col-3 {
     width: 25%; }
-
   .col-4 {
     width: 33.3333%; }
-
   .col-5 {
     width: 41.6666%; }
-
   .col-6 {
     width: 50%; }
-
   .col-7 {
     width: 58.3333%; }
-
   .col-8 {
     width: 66.6666%; }
-
   .col-9 {
     width: 75%; }
-
   .col-10 {
     width: 83.3333%; }
-
   .col-11 {
     width: 91.6666%; }
-
   .col-12 {
     width: 100%; } }
+
 .well {
   padding: 1rem; }
 
@@ -1141,30 +1131,26 @@ header {
 @media (min-width: 768px) {
   #hamburger {
     display: none; }
-
   .nav-menu {
     max-height: 0; }
-
   #menu-down {
     max-height: 0;
     padding: 0; }
-
   .nav-list li {
     display: inline; }
-
   .nav-list li a {
     display: block;
     margin: 1rem 0.75rem 0.5rem 0.95rem; }
-
   .site-logo {
     display: block;
     float: left; }
-
   #logo {
     width: 80px; } }
+
 @media screen and (min-width: 480px) {
   .navbar {
     padding: 0; } }
+
 footer {
   color: white;
   background-color: #324d5c;
@@ -1307,6 +1293,9 @@ section.om-oss .section-heading {
   display: block;
   float: right; }
 
+.hem .projekt .section-heading {
+  margin-bottom: 2.25rem; }
+
 .projekt {
   padding-bottom: 0; }
   .projekt .section-heading {
@@ -1377,6 +1366,8 @@ section.om-oss .section-heading {
   padding: 1.5rem 0;
   border-bottom: 1px black solid;
   border-color: #44697d; }
+  .quote-section .quote-text-box.last {
+    border-bottom: none; }
   @media (min-width: 768px) {
     .quote-section .quote-text-box {
       border-style: none; } }
@@ -1386,7 +1377,8 @@ section.om-oss .section-heading {
 
 .quote-person {
   color: #45b29d;
-  font-weight: normal; }
+  font-weight: normal;
+  margin-bottom: 0; }
 
 .quote-section .container:last-child {
   border-color: none; }
@@ -1410,6 +1402,7 @@ section.om-oss .section-heading {
 @media (min-width: 40rem) and (max-width: 60rem) {
   .sonic {
     order: 4; } }
+
 @media (min-width: 60rem) {
   .sonic {
     padding-top: 9.25rem; } }
@@ -1462,6 +1455,7 @@ section.om-oss .section-heading {
 @media (min-width: 40rem) and (max-width: 60rem) {
   #contact-media-query-squasher {
     height: 42rem; } }
+
 @media (min-width: 60rem) {
   #contact-media-query-squasher {
     height: 42rem; } }
@@ -1537,7 +1531,7 @@ section.om-oss .section-heading {
       flex-flow: row nowrap; } }
 
 /*Media querys. 
-/L├ñgg dessa i respektive element.
+/Lägg dessa i respektive element.
 /breakpoints:
 /DESKTOP 1280px
 /TABLET 768px
@@ -1568,5 +1562,3 @@ body {
   background-color: white;
   font: 16px/1.5 "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 300; }
-
-/*# sourceMappingURL=main.css.map */
